获取到传感器的数值

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -92,6 +92,7 @@
                                 android:textSize="18sp" />
 
                             <TextView
+                                android:id="@+id/frag_home_text_co2"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:layout_marginLeft="10dp"
@@ -184,6 +185,7 @@
                                 android:textSize="18sp" />
 
                             <TextView
+                                android:id="@+id/frag_home_text_gzqd"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:layout_marginLeft="10dp"
@@ -276,6 +278,7 @@
                                 android:textSize="18sp" />
 
                             <TextView
+                                android:id="@+id/frag_home_text_trwd"
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
                                 android:gravity="center_vertical"
@@ -292,6 +295,7 @@
                                 android:textSize="18sp" />
 
                             <TextView
+                                android:id="@+id/frag_home_text_trsd"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:gravity="center_vertical"
@@ -396,6 +400,7 @@
                                 android:textSize="18sp" />
 
                             <TextView
+                                android:id="@+id/frag_home_text_kqwd"
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
                                 android:gravity="center_vertical"
@@ -412,6 +417,7 @@
                                 android:textSize="18sp" />
 
                             <TextView
+                                android:id="@+id/frag_home_text_kqsd"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:gravity="center_vertical"
