--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -55,8 +55,8 @@
                     android:orientation="horizontal">
 
                     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
+                        android:layout_width="130dp"
+                        android:layout_height="130dp"
                         android:src="@drawable/co2"
                         app:civ_border_color="#00000000"
                         app:civ_border_width="2dp" />
@@ -105,6 +105,7 @@
 
 
                         <TextView
+                            android:id="@+id/frag_home_text_ss_co2"
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
                             android:layout_weight="1"
@@ -119,6 +120,7 @@
                         android:layout_height="match_parent">
 
                         <ImageView
+                            android:id="@+id/frag_home_img_p_co2"
                             android:layout_width="100dp"
                             android:layout_height="50dp"
                             android:src="@drawable/p1" />
@@ -148,8 +150,8 @@
                     android:orientation="horizontal">
 
                     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
+                        android:layout_width="130dp"
+                        android:layout_height="130dp"
                         android:src="@drawable/guangzhao"
                         app:civ_border_color="#00000000"
                         app:civ_border_width="2dp" />
@@ -198,6 +200,7 @@
 
 
                         <TextView
+                            android:id="@+id/frag_home_text_ss_gz"
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
                             android:layout_weight="1"
@@ -212,6 +215,7 @@
                         android:layout_height="match_parent">
 
                         <ImageView
+                            android:id="@+id/frag_home_img_p_gz"
                             android:layout_width="100dp"
                             android:layout_height="50dp"
                             android:src="@drawable/p1" />
@@ -241,8 +245,8 @@
                     android:orientation="horizontal">
 
                     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
+                        android:layout_width="130dp"
+                        android:layout_height="130dp"
                         android:src="@drawable/turang"
                         app:civ_border_color="#00000000"
                         app:civ_border_width="2dp" />
@@ -308,6 +312,7 @@
 
 
                         <TextView
+                            android:id="@+id/frag_home_text_ss_trwd"
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
                             android:layout_weight="1"
@@ -317,6 +322,7 @@
                             android:textSize="18sp" />
 
                         <TextView
+                            android:id="@+id/frag_home_text_ss_trsd"
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
                             android:layout_weight="1"
@@ -331,6 +337,7 @@
                         android:layout_height="match_parent">
 
                         <ImageView
+                            android:id="@+id/frag_home_img_p_tr"
                             android:layout_width="100dp"
                             android:layout_height="50dp"
                             android:src="@drawable/p1" />
@@ -363,8 +370,8 @@
                     android:orientation="horizontal">
 
                     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
+                        android:layout_width="130dp"
+                        android:layout_height="130dp"
                         android:src="@drawable/kongqi"
                         app:civ_border_color="#00000000"
                         app:civ_border_width="2dp" />
@@ -429,6 +436,7 @@
 
 
                         <TextView
+                            android:id="@+id/frag_home_text_ss_kqwd"
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
                             android:layout_weight="1"
@@ -438,6 +446,7 @@
                             android:textSize="18sp" />
 
                         <TextView
+                            android:id="@+id/frag_home_text_ss_kqsd"
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
                             android:layout_weight="1"
@@ -452,6 +461,7 @@
                         android:layout_height="match_parent">
 
                         <ImageView
+                            android:id="@+id/frag_home_img_p_kq"
                             android:layout_width="100dp"
                             android:layout_height="50dp"
                             android:src="@drawable/p1" />
