--- a/app/src/main/res/layout/fragment_sunny.xml
+++ b/app/src/main/res/layout/fragment_sunny.xml
@@ -50,20 +50,24 @@
 
     </LinearLayout>
 
-    <ImageButton
+    <ToggleButton
+        android:id="@+id/frag_sunny_guangzhao"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="20dp"
-        android:background="@null"
+        android:background="@drawable/toggle__dengguang"
         android:scaleType="fitXY"
-        android:src="@drawable/dakaiguangzhao" />
+        android:textOff=""
+        android:textOn="" />
 
-    <ImageButton
+    <ToggleButton
+        android:id="@+id/frag_sunny_fengming"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="20dp"
-        android:background="@null"
+        android:background="@drawable/toggle__fengming"
         android:scaleType="fitXY"
-        android:src="@drawable/dakaibaojing" />
+        android:textOff=""
+        android:textOn="" />
 
 </LinearLayout>
