--- a/app/src/main/res/layout/fragment_tr.xml
+++ b/app/src/main/res/layout/fragment_tr.xml
@@ -28,15 +28,16 @@
             android:padding="20dp">
 
             <TextView
+                android:id="@+id/c_text_1"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
-                android:text="当前土壤温度：32"
                 android:textColor="#e78642"
                 android:textSize="15sp" />
 
             <TextView
+                android:id="@+id/c_text_3"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
@@ -55,64 +56,59 @@
             android:padding="20dp">
 
             <TextView
+                android:id="@+id/c_text_2"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
-                android:text="当前土壤温度：32"
                 android:textColor="#e78642"
                 android:textSize="15sp" />
 
             <TextView
+                android:id="@+id/c_text_4"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
-                android:text="温度设定范围：32"
+                android:text="湿度设定范围：32"
                 android:textColor="#e78642"
                 android:textSize="15sp" />
         </LinearLayout>
 
     </LinearLayout>
 
-    <ToggleButton
+    <ImageView
         android:id="@+id/frag_tr_guangzhao"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/toggle__dengguang"
-        android:scaleType="fitXY"
-        android:textOff=""
-        android:textOn="" />
+        android:background="@drawable/dakaiguangzhao"
+        android:scaleType="fitXY" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ToggleButton
+        <ImageView
             android:id="@+id/frag_tr_shuibeng"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginTop="20dp"
-            android:background="@drawable/toggle__shuibeng"
-            android:scaleType="fitXY"
-            android:textOff=""
-            android:textOn="" />
+            android:background="@drawable/dakaishui"
+            android:scaleType="fitXY" />
 
         <View
             android:layout_width="20dp"
             android:layout_height="1dp" />
 
-        <ToggleButton
+        <ImageView
             android:id="@+id/frag_tr_fengming"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginTop="20dp"
-            android:background="@drawable/toggle__fengming"
-            android:scaleType="fitXY"
-            android:textOff=""
-            android:textOn="" />
+            android:background="@drawable/dakaibaojing"
+            android:scaleType="fitXY" />
     </LinearLayout>
 
 </LinearLayout>
