修改小地方

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,10 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/logding"
     tools:context="xyz.abug.www.activity.SplashActivity">
+
+    <View
+        android:id="@+id/splash_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#55000000"/>
+
+    <com.tuyenmonkey.mkloader.MKLoader
+        android:id="@+id/splash_loader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        app:mk_type="Sharingan" />
 
     <LinearLayout
         android:id="@+id/splash_linear"
@@ -12,7 +26,8 @@
         android:layout_height="match_parent"
         android:background="#55000000"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -52,9 +67,9 @@
                     android:layout_height="wrap_content"
                     android:background="@null"
                     android:hint="请输入IP地址"
-                    android:text="10.44.1.102"
                     android:padding="12dp"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:text="10.44.1.102" />
 
                 <View
                     android:layout_width="match_parent"
