--- a/app/src/main/res/layout/fragment_kq.xml
+++ b/app/src/main/res/layout/fragment_kq.xml
@@ -18,33 +18,33 @@
         android:layout_marginTop="15dp"
         android:background="@drawable/turangbeijing"
         android:orientation="horizontal"
+        android:paddingBottom="20dp"
         android:paddingLeft="10dp"
-        android:paddingRight="10dp">
+        android:paddingRight="10dp"
+        android:paddingTop="20dp">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:padding="20dp">
+            android:gravity="center"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/d_text_1"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
-                android:text="当前空气温度：32"
                 android:textColor="#e78642"
                 android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/d_text_3"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
-                android:text="温度设定范围：32"
                 android:textColor="#e78642"
                 android:textSize="15sp" />
 
@@ -54,26 +54,24 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:padding="20dp">
+            android:gravity="center"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/d_text_2"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
-                android:text="当前空气温度：32"
                 android:textColor="#e78642"
                 android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/d_text_4"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
-                android:text="湿度设定范围：32"
                 android:textColor="#e78642"
                 android:textSize="15sp" />
         </LinearLayout>
