--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -2,18 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f6f6f6"
+    android:background="#ffffff"
     android:orientation="vertical">
 
     <View
         android:layout_width="wrap_content"
-        android:layout_height="1dp" />
+        android:layout_height="1dp"
+        android:background="#f6f6f6" />
 
     <LinearLayout
         android:id="@+id/frag_setting_linear_zidong"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="#ffffff"
+        android:background="?android:attr/selectableItemBackground"
+        android:clickable="true"
         android:orientation="horizontal"
         android:padding="15dp">
 
@@ -28,7 +30,7 @@
             android:layout_marginLeft="8dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:text="自动控制"
+            android:text="手动控制"
             android:textSize="18sp" />
 
         <ImageView
@@ -41,13 +43,16 @@
 
     <View
         android:layout_width="wrap_content"
-        android:layout_height="1dp" />
+        android:layout_height="1dp"
+        android:background="#f6f6f6" />
 
 
     <LinearLayout
+        android:id="@+id/frag_setting_linear_qingchu"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="#ffffff"
+        android:background="?android:attr/selectableItemBackground"
+        android:clickable="true"
         android:orientation="horizontal"
         android:padding="15dp">
 
@@ -68,19 +73,21 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:text="200M" />
+            android:layout_gravity="center_vertical" />
 
     </LinearLayout>
 
     <View
         android:layout_width="wrap_content"
-        android:layout_height="1dp" />
+        android:layout_height="1dp"
+        android:background="#f6f6f6" />
 
     <LinearLayout
+        android:id="@+id/frag_setting_linear_banben"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="#ffffff"
+        android:background="?android:attr/selectableItemBackground"
+        android:clickable="true"
         android:orientation="horizontal"
         android:padding="15dp">
 
@@ -108,13 +115,14 @@
 
     <View
         android:layout_width="wrap_content"
-        android:layout_height="1dp" />
-
+        android:layout_height="1dp"
+        android:background="#f6f6f6" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="#ffffff"
+        android:background="?android:attr/selectableItemBackground"
+        android:clickable="true"
         android:orientation="horizontal"
         android:padding="15dp">
 
@@ -142,13 +150,16 @@
 
     <View
         android:layout_width="wrap_content"
-        android:layout_height="1dp" />
+        android:layout_height="1dp"
+        android:background="#f6f6f6" />
 
     <LinearLayout
+        android:id="@+id/frag_setting_linear_tuichu"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="15dp"
-        android:background="#ffffff"
+        android:background="?android:attr/selectableItemBackground"
+        android:clickable="true"
         android:orientation="horizontal"
         android:padding="15dp">
 
@@ -167,5 +178,10 @@
             android:textSize="18sp" />
 
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#f6f6f6" />
 
 </LinearLayout>
