--- a/app/src/main/res/layout/fragment_setting_sunny.xml
+++ b/app/src/main/res/layout/fragment_setting_sunny.xml
@@ -59,6 +59,7 @@
                 android:textSize="16sp" />
 
             <ImageView
+                android:layout_marginLeft="5dp"
                 android:id="@+id/frag_set_sunny_img"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -91,7 +92,10 @@
 
             <EditText
                 android:id="@+id/frag_set_sunny_min"
-                android:layout_width="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_width="50dp"
+                android:background="@drawable/car0"
+                android:gravity="center"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
                 android:textColor="#0057ff"
@@ -111,7 +115,10 @@
 
             <EditText
                 android:id="@+id/frag_set_sunny_max"
-                android:layout_width="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_width="50dp"
+                android:background="@drawable/car0"
+                android:gravity="center"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
                 android:textColor="#0057ff"
