--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
         android:layout_weight="1" />
 
     <LinearLayout
+        android:id="@+id/main_linear_bar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:orientation="horizontal"
