--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -1,83 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f6f6f6"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="1dp" />
-
-    <TextView
+    <LinearLayout
+        android:id="@+id/frag_help_linear_dh"
+        android:background="#f6f6f6"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="15dp"
-        android:text="操作指引"
-        android:textColor="#000000"
-        android:textSize="18sp" />
+        android:layout_height="match_parent">
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="1dp" />
 
-    <TextView
-        android:id="@+id/textView"
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="15dp"
+            android:text="操作指引"
+            android:textColor="#000000"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/frag_help_text_1"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:background="@drawable/greenbackground"
+            android:gravity="center"
+            android:text="1.第一条操作指引"
+            android:textColor="#ffffff"
+            android:textSize="18sp" />
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:src="@drawable/down" />
+
+        <TextView
+            android:id="@+id/frag_help_text_2"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:background="@drawable/greenbackground"
+            android:gravity="center"
+            android:text="2.第二条操作指引"
+            android:textColor="#ffffff"
+            android:textSize="18sp" />
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:src="@drawable/down" />
+
+        <TextView
+            android:id="@+id/frag_help_text_3"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:background="@drawable/greenbackground"
+            android:gravity="center"
+            android:text="3.第三条操作指引"
+            android:textColor="#ffffff"
+            android:textSize="18sp" />
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:src="@drawable/down" />
+
+        <TextView
+            android:id="@+id/frag_help_text_4"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:background="@drawable/greenbackground"
+            android:gravity="center"
+            android:text="4.第四条操作指引"
+            android:textColor="#ffffff"
+            android:textSize="18sp" />
+    </LinearLayout>
+
+
+
+
+    <LinearLayout
+        android:background="#9f000000"
+        android:id="@+id/frag_help_linear_data"
+        android:orientation="vertical"
+        android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:background="@drawable/greenbackground"
-        android:gravity="center"
-        android:text="1.第一条操作指引"
-        android:textColor="#ffffff"
-        android:textSize="18sp" />
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_gravity="center"
-        android:src="@drawable/down" />
+        <LinearLayout
+            android:layout_weight="1"
+            android:background="@drawable/yuan_zhiyin"
+            android:layout_margin="25dp"
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_height="0dp">
+            <TextView
+                android:gravity="center_vertical"
+                android:padding="8dp"
+                android:textSize="20sp"
+                android:text="adsfa"
+                android:textColor="#ffffff"
+                android:id="@+id/frag_help_text_data"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </LinearLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:background="@drawable/greenbackground"
-        android:gravity="center"
-        android:text="2.第二条操作指引"
-        android:textColor="#ffffff"
-        android:textSize="18sp" />
+        <ImageView
+            android:id="@+id/frag_help_img_close"
+            android:layout_marginBottom="25dp"
+            android:src="@drawable/close"
+            android:layout_gravity="center"
+            android:layout_width="60dp"
+            android:layout_height="60dp" />
 
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_gravity="center"
-        android:src="@drawable/down" />
+    </LinearLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:background="@drawable/greenbackground"
-        android:gravity="center"
-        android:text="3.第三条操作指引"
-        android:textColor="#ffffff"
-        android:textSize="18sp" />
-
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_gravity="center"
-        android:src="@drawable/down" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:background="@drawable/greenbackground"
-        android:gravity="center"
-        android:text="4.第四条操作指引"
-        android:textColor="#ffffff"
-        android:textSize="18sp" />
-</LinearLayout>
+</RelativeLayout>
