--- a/app/src/main/res/layout/fragment_setting_co2.xml
+++ b/app/src/main/res/layout/fragment_setting_co2.xml
@@ -59,6 +59,7 @@
                 android:textSize="16sp" />
 
             <ImageView
+                android:layout_marginLeft="5dp"
                 android:id="@+id/frag_set_co2_img"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -91,7 +92,10 @@
 
             <EditText
                 android:id="@+id/frag_set_co2_min"
-                android:layout_width="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_width="50dp"
+                android:background="@drawable/car0"
+                android:gravity="center"
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:singleLine="true"
@@ -112,8 +116,11 @@
 
             <EditText
                 android:id="@+id/frag_set_co2_max"
-                android:layout_width="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_width="50dp"
+                android:background="@drawable/car0"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:inputType="number"
                 android:singleLine="true"
                 android:textColor="#0057ff"
